avoid wrap

--- a/styles.less
+++ b/styles.less
@@ -261,6 +261,7 @@ p {
     color: @col-white;
     font-size: 14px;
     padding: 2px 4px;
+    white-space: nowrap;
      > i {
       margin-right: 3px;
      }
